# cypher_sheet_api

./: .gitignore  Cargo.toml  LICENSE  README.md  generate.sh
character_service/: Cargo.toml  README.md
character_service/src/: main.rs
character_service/src/db/: errors.rs  file.rs  mod.rs
character_service/src/proto/: character.rs  characters_grpc.rs  mod.rs  storage.rs
deploy/: Cargo.toml  build.rs
deploy/src/: components.rs  deploy.rs  image.rs  main.rs  options.rs  resources.rs  status.rs
discord_bot/: Cargo.toml  Containerfile  README.md
discord_bot/src/: embeds.rs  main.rs  options.rs
env_arg/: Cargo.toml
env_arg/src/: lib.rs
env_arg_derive/: Cargo.toml
env_arg_derive/src/: lib.rs
proto_rs/: Cargo.toml
proto_rs/src/: character.rs  characters.rs  characters_grpc.rs  lib.rs
