[package]
name = "character_service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }
rstest = "0.16.0"
grpcio = "0.12"
protobuf = "2.28"
futures = "0.3.26"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
tempfile = "3.3.0"
uuid = { version = "1.3.0", features = ["v4"] }
proto_rs = { path = "../proto_rs" }


[build-dependencies]
protobuf-codegen = "3.2.0"
protoc-grpcio = "3.0.0"
