[package]
name = "deploy"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "deploy"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
kube = { version = "0.82.0", default-features = false, features = [
    "client",
    "rustls-tls",
] }
k8s-openapi = { version = "0.18.0", features = ["v1_26"] }
clap = { version = "4.2.0", features = ["derive", "env", "string"] }
clap_derive = "4.2.0"
assert-json-diff = "2.0.2"
base64 = "0.21.0"

discord_bot = { path = "../discord_bot" }
env_arg = { path = "../env_arg" }

[dev-dependencies]
rstest = "0.17.0"

[build-dependencies]
built = { version = "0.6", features = ["git2"] }
